# samp-tsconnector

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTeamspeak.cpp  LICENSE  README.md  TSConnector.inc  TSConnector.inc.in  TSConnector.sln  TSConnector.vcxproj  TSConnector.vcxproj.filters  makefile  plugin.def
src/: CCallback.cpp  CCallback.h  CCallback.hpp  CMakeLists.txt  CNetwork.cpp  CNetwork.h  CNetwork.hpp  CServer.cpp  CServer.h  CServer.hpp  CSingleton.h  CTeamspeak.cpp  CTeamspeak.h  CUtils.cpp  CUtils.h  CUtils.hpp  main.cpp  main.h  main.hpp  natives.cpp  natives.h  natives.hpp  thread.cpp  thread.h  version.hpp.in
